--- a/capter_8_ninja_quiz/index.html
+++ b/capter_8_ninja_quiz/index.html
@@ -5,9 +5,104 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <title>Ninja Quiz</title>
 </head>
 <body>
 
+<!--top section-->
+<div class="intro py-3 bg-white text-center">
+    <div class="container">
+        <h2 class="text-primary display-3 my-4">Ninja Quiz</h2>
+    </div>
+</div>
+
+<!--result section-->
+
+<div class="result py-4 d-none bg-light text-center">
+    <div class="container lead">
+        <p>You are <span class="text-primary display-4 p-3 percentage">0%</span> ninja</p>
+    </div>
+</div>
+
+<!--Quiz section-->
+<div class="quiz py-4 bg-primary">
+    <div class="container">
+        <h2 class="my-5 text-white">On with the questions...</h2>
+        <form class="quiz-form text-light">
+            <div class="my-5">
+                <p class="lead font-weight-normal">1. How do you give a ninja directions?</p>
+                <div class="form-check my-2 text-white-50">
+                    <label class="form-check-label">
+                        <input type="radio" name="q1" value="A" checked>
+
+                        Show them a map</label>
+                </div>
+                <div class="form-check my-2 text-white-50">
+                    <label class="form-check-label">
+                        <input type="radio" name="q1" value="B">
+
+                        Don't worry, a ninja will find you.</label>
+                </div>
+            </div>
+            <div class="my-5">
+                <p class="lead font-weight-normal">2. If a ninja has 3 apples, then gives one to Mario & one to Yoshi,
+                    how many apples does the ninja have left?</p>
+                <div class="form-check my-2 text-white-50">
+                    <label class="form-check-label">
+                        <input type="radio" name="q2" value="A" checked>
+                        1 apple</label>
+                </div>
+                <div class="form-check my-2 text-white-50">
+                    <label class="form-check-label">
+                        <input type="radio" name="q2" value="B">
+                        3 apples, and two corpses
+                    </label>
+                </div>
+            </div>
+            <div class="my-5">
+                <p class="lead font-weight-normal">3. How do you know when you-ve met a ninja?</p>
+                <div class="form-check my-2 text-white-50">
+                    <label class="form-check-label">
+                        <input type="radio" name="q3" value="A" checked>
+
+                        You'll recognize the outfit</label>
+                </div>
+                <div class="form-check my-2 text-white-50">
+                    <label class="form-check-label">
+                        <input type="radio" name="q3" value="B">
+
+                        The grim reaper will tell you</label>
+                </div>
+            </div>
+            <div class="my-5">
+                <p class="lead font-weight-normal">4. What is a ninja's favourite array method?</p>
+                <div class="form-check my-2 text-white-50">
+                    <label class="form-check-label">
+                        <input type="radio" name="q4" value="A" checked>
+
+                        forEach()</label>
+                </div>
+                <div class="form-check my-2 text-white-50">
+                    <label class="form-check-label">
+                        <input type="radio" name="q4" value="B">
+
+                        slice()</label>
+                </div>
+            </div>
+            <div class="text-center">
+                <input type="submit" class="btn btn-light">
+            </div>
+        </form>
+    </div>
+</div>
+
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
+<script src="app.js"></script>
 </body>
 </html>
